# TPGO-RS

./: .gitignore  CMakeLists.txt  README.md  ShapeOfMotion.m  check_prev_cost_script.m  compare_procrustes_manopt.m  compare_procrustes_manopt_riemstaircase.m  compute_hrt.m  cp2m_noiseinit.m  cp2m_test_end_workspace.mat  do_rsom_procrustes_genproc.m  do_som.m  do_som_cp2m_noiseinit.m  do_som_cp2m_riemstair_noiseinit.m  do_som_manopt_hess_twomodes.m  do_som_manopt_maxiter.m  make_cost_matrix.m  manopt_first_tutorial.m  mus.txt  noise_test_params.csv  old_compare_procrustes_manopt.m  plot_results.m  plot_rsom_cpp_test_noisy_results.py  remake_plots.m  rsom_genproc.m  run_final_tests.m  run_som_adjmat.m  run_testnetwork_tests.cpp  sigmas.txt  single_run_rsom_rs.cpp  solve_gauge_symmetry_1rot.m  test_POCdegree2Align_som.m  test_check_recovery.cpp  test_check_retraction.cpp  test_dijkstra_self.cpp  test_fail_recovery_n9.m  test_gfg_dijkstra.cpp  test_is_Rb_orth.m  test_linesearch_som.cpp  test_make_Ab.cpp  (+10 more)
app/: plot_rsom_cpp_test_noisy_results.py  run_testnetwork_tests.cpp  run_testnetwork_tests_icp.cpp  run_testnetwork_tests_procrustes.cpp
cfg/: run_testnetwork_tests.cfg  test_single_run_rsom_rs.cfg
cost_grad_hess/: README.md  som_cost_rot_stiefel.m  som_ehess_rot_stiefel.m  som_rgrad_rot_stiefel.m  som_rhess_rot_stiefel.m
cost_grad_hess_pim/: hess_genproc_T.m
data/: A_stiefel_noisy.csv  Tijs_tnhc.csv  Unext_vec.csv  X_initguess.csv  X_initguess_n10.csv  X_initguess_test_single_run_rsom_rs.csv  Xnext_vec.csv  etaX_initguess.csv  hmat.csv  procrustes_t_start.csv  recov_edges.csv  recov_tijs.csv  recov_x_gt.csv  recov_x_manopt_out.csv  rphg_test_edges.csv  rphg_test_tijs.csv  rphg_test_x.csv  sigmas.txt  ssom_x_start_n5_mindeg2.csv  tijs_n10.csv  tijs_vectorized_n10.csv  zerodet_ws.mat
do_som/: .MATLABDriveTag  README.md  do_som_genproc.m
do_som_stiefel/: .MATLABDriveTag  README.md
functions/: .MATLABDriveTag  cat_zero_rows_3d_array.m  check_is_rotation.m  compare_translation_results.m  compute_fixed_cost_term.m  eye3d.m  kabsch_umeyama_procrustes.m  make_A_b.m  make_A_b_noloops_stiefel.m  make_A_b_stiefel.m  make_LT_PT.m  make_LT_PT_noloops.m  make_LT_PT_stiefel.m  make_random_sym_blockrot_matrix.m  make_results_pairwise.m  make_tijs_vec.m  matStackH_d2.m  multiprod3.m  remove_quasi_zeros.m  som_manopt.m  som_manopt_genproc.m  som_manopt_genproc_multispan.m  som_manopt_genproc_stiefel.m  som_procrustes.m  som_riemannian_staircase.m  som_stepone_manopt_stiefel.m  som_steptwo_manopt.m  stiefel_geodFun.asv  stiefel_randGeodFun.m  tail_array.m  testNetwork_som.m
genproc/: POCRotateToMinimizeLastEntries.m  POCdegree2Align.m  Qc_recovery_Rb_initguess.m  README.md  bad_recov_determinants_ws.mat  check_Rb_ambiguity.m  check_recovery_error.m  cost_genproc.m  do_rsom_procrustes_genproc.m  edge_diffs_2_T.m  eigencheck_hessian_genproc.m  find_Rb_initguess.m  hess_genproc.m  is_equal_floats.m  make_T_edges.m  make_Tij1j2s.m  make_Tij1j2s_edges.m  pim_function_genproc.m  qcrb_geodFun.m  qcrb_randGeodFun.m  remake_plots.m  rsom_cost_base.m  rsom_genproc.m  rsom_pim_hessian_genproc.m  run_final_tests.m  run_manopt_rsom_genproc.m  run_som_adjmat.m  solve_gauge_symmetry.m  solve_gauge_symmetry_1rot.m  testNetwork_params.m  test_POCRotateToMinimizeLastEntries.m  test_POCdegree2Align.m  test_POCdegree2Align_gt.m  test_POCdegree2Align_som.m  test_Qbnn_recovery.m  test_Qc_recovery.m  test_Qc_recovery_Rb_initguess.m  test_cost_genproc.m  test_cost_grad_hess_genproc_manopt.m  test_fail_recovery_n9.m  (+7 more)
genproc_curve_tests/: test_rsom_genproc_test_egrad.m  test_rsom_genproc_test_rgrad.m
include/: som_procrustes.cpp  som_procrustes.h  som_utils.cpp  som_utils.h
matlab/: POCProjectiveRecovery.m  POCProjectiveRecovery2.m  POCProjectiveRecovery2_backup.m  POCProjectiveRecovery_nbPoses.m  POCProjectiveRecovery_nbPoses2.m  README.md  RbRecovery.m  align2d_nbPoses.m  align3d.m  check_T_recovery.m  check_ssom_recovery_formulation.m  check_ssom_recovery_formulation_lowdeg.m  debug_new_hessian_computation.m  do_rsom_procrustes_genproc.m  do_ssom.m  edge_diffs_2_T_subgraph.m  ethz_rigid_motion_computation.m  generate_cpp_dataset.m  generate_cpp_dataset_ssom.m  generate_testnetwork_n100.m  makeABClambda.m  make_T_edges_subgraph.m  make_tijs_scaled.m  multiblkdiag.m  multidiag.m  multiprodN.m  normvec.m  plot_results_ssom.m  procrustes_R.m  question_lambda_continuous_ambiguities.m  question_lambda_rec.m  recover_R_deg2.m  recover_T_edges.m  remake_plots.m  rsom_genproc.m  run_final_tests.m  run_manopt_rsom_genproc.m  run_ssom_sigma_tests.m  scale_formulation.m  scale_formulation_manopt.m  (+30 more)
newcost/: README.md  check_cost_formulation.m  check_cost_trace.m  check_step1_cost_matricial.m  compute_step1_fct_noloops.m  compute_step1_fixed_cost_term.m  compute_step1_p_fct.m  do_rsom_procrustes_rs.m  make_Aconst_b.m  make_LR_PR_BR.m  make_LR_PR_BR_noloops.m  make_p.m  make_p_noloops.m  rsom_cost_rot_stiefel.m  rsom_egrad_rot_stiefel.m  rsom_ehess_rot_stiefel.m  rsom_manopt.m  rsom_pim_hessian.m  rsom_rgrad_rot_stiefel.m  rsom_rhess_rot_stiefel.m  rsom_rs.m  rsom_step1.m  rsom_step2.m  run_manopt_rsom.m  test_make_p.m  test_make_p_frct.m  test_proj_diff_symb.m  test_rsom.m  test_rsom_curve.m  test_rsom_curve_test.m  test_rsom_pim_hessian.m  test_rsom_test_egrad.m  test_rsom_test_ehess.m  test_rsom_test_rgrad.m  test_rsom_test_rhess.m  test_rsom_test_rhess_manopt.m  test_step1_step2_costs.m  tmp.m
newtests/: .MATLABDriveTag  README.md  riemannian_connection_stiefel.m  test_double_stiefel_proj_composition.m  test_problem.m  test_problem_curve.m  test_problem_test_ehess.m  test_problem_test_rgrad.m  test_problem_test_rhess.m  test_problem_test_rhess_canonical.m  test_problem_test_rhess_manopt.m
oldcost/: compare_procrustes_manopt.m  compare_procrustes_manopt_genproc.m  compare_procrustes_manopt_riemstaircase.m  do_som_manopt_rgrad_twomodes.m  do_som_procrustes_manopt_riemstaircase.m  do_som_procrustes_manopt_sesyncriemstair.m
recovery/: procrustesRb.m  qcrb_randGeodFun.m
riemannian_staircase_se_sync/: README.md  (+26 more)
(+3570 files in other folders)
